js/src/tests/test262/built-ins/Error/prototype/stack/setter-own-accessor.js


























var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];

  
  var observed;
  var withSetter = new Ctor('msg');
  Object.defineProperty(withSetter, 'stack', {
    get: function () { return observed; },
    set: function (v) { observed = v; },
    enumerable: false,
    configurable: true,
  });

  set.call(withSetter, 'sentinel');
  assert.sameValue(observed, 'sentinel', Ctor.name + ': own setter received the value');

  
  var withoutSetter = new Ctor('msg');
  Object.defineProperty(withoutSetter, 'stack', {
    get: function () { return 'getter-only'; },
    enumerable: false,
    configurable: true,
  });

  assert.throws(TypeError, function () {
    set.call(withoutSetter, 'sentinel');
  }, Ctor.name + ': own accessor without a setter');
}

reportCompare(0, 0);
